2014-06-13  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        Create MSE and EME watchlist
        https://bugs.webkit.org/show_bug.cgi?id=133810

        Reviewed by Eric Carlson.

        * Scripts/webkitpy/common/config/watchlist: Create MSEEME
        definition and add Eric Carlson and myself to it.

2014-06-12  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove all deprecated API from GObject DOM bindings
        https://bugs.webkit.org/show_bug.cgi?id=133728

        Reviewed by Martin Robinson.

        * gtk/webkitdom.py:
        (WebKitDOMDocGenerator): Remove all deleted classes from the list.
        (WebKitDOMDocGeneratorSections.__init__): Fix a typo in member initialization.

2014-06-12  Simon Fraser  <simon.fraser@apple.com>

        [iOS] Fix the view being half offscreen in WebKitTestRunner on iOS
        https://bugs.webkit.org/show_bug.cgi?id=133835

        Reviewed by Tim Horton.
        
        Don't do the _fakeOrigin stuff when -initWithFrame: is calling -setFrame:

        * WebKitTestRunner/ios/PlatformWebViewIOS.mm:
        (-[WebKitTestRunnerWindow initWithFrame:]):
        (-[WebKitTestRunnerWindow setFrame:]):

2014-06-12  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Performance tests should be always ran with WKTR.
        https://bugs.webkit.org/show_bug.cgi?id=133780

        Reviewed by Ryosuke Niwa.

        * Scripts/webkitpy/performance_tests/perftestsrunner.py:
        (PerfTestsRunner.__init__): Enable webkit_test_runner when port
        is GTK.

2014-06-12  Sergio Villar Senin  <svillar@igalia.com>

        [GTK] REGRESSION: application name is not correctly appended to the UA
        https://bugs.webkit.org/show_bug.cgi?id=133793

        Reviewed by Carlos Garcia Campos.

        * TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitSettings.cpp:
        (testWebKitSettingsUserAgent):

2014-06-12  Sergio Villar Senin  <svillar@igalia.com>

        [GTK] Unsupported browser in www.icloud.com